The mesh is now generated from the Boundary and BoundaryPart classes.
This causes some problem now. Particularly, i have broken many tests related to the constrained mesh generation. The methods need some debugging, so.